feat: edit index.html

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Trispace", sans-serif;
   min-height: 100vh;
@@ -26,3 +30,24 @@ body {
   max-width: 1440px;
   margin: 0 auto;
 }
+
+.nav-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+}
+
+.nav-link {
+  padding: 0 20px;
+  line-height: 50px;
+  text-decoration: none;
+  color: black;
+  transition: 0.3s;
+}
+
+.nav-link:hover {
+  color: #0000ff;
+}
+
+
